<resources>
    <string name="app_name">SUMWHERE</string>
    <string name="facebook_app_id">391080511351341</string>//facebook 갈래말래 App_id
    <string name="fb_login_protocol_scheme">fb391080511351341</string>
    <string name="kakao_app_key">9bebd41e1c208b98ff5b9b2fd16d8529</string>
    <string name="google_map_key">AIzaSyAja2hADD2pvMsn1g63ZmXFZC_WKqzc5Vs</string>
    <string name="title_activity_matching_chat_main">matching_chat_main</string>
    <string name="title_activity_profile">Profile</string>
    // kakaoTalk 갈래말래 App_id
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_friend">친구</string>
    <string name="nav_item_profile">프로필</string>
    <string name="nav_item_alarm">알림 설정</string>
    <string name="nav_item_store">스토어</string>
    <string name="nav_item_setting">계정 설정</string>
    <string name="nav_item_qna">문의 하기</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="delete">DELETE</string>
    <string name="membership"><u>회원가입하기</u></string>
    <string name="title_activity_login_email">LoginEmailActivity</string>

    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="label_calender_week">
        <item name="0"></item>
        <item name="1">일</item>
        <item name="2">월</item>
        <item name="3">화</item>
        <item name="4">수</item>
        <item name="5">목</item>
        <item name="6">금</item>
        <item name="7">토</item>
    </string-array>
</resources>
