<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_profile"
            android:icon="@drawable/ic_image"
            android:title="@string/nav_item_profile" />
        <item
            android:id="@+id/navigation_item_friend"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_item_friend" />
        <item
            android:id="@+id/navigation_item_alarm"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_alarm" />
        <item
            android:id="@+id/navigation_item_store"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_store" />
        <item
            android:id="@+id/navigation_item_setting"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_setting" />
        <item
            android:id="@+id/navigation_item_qna"
            android:icon="@drawable/ic_place"
            android:title="@string/nav_item_qna" />
    </group>

</menu>
